# TurnCore

./: AGENTS.md  CLAUDE.md  README.md  pyproject.toml
docs/: spec.md  structure.md
standards/: contracts.md  errors.md  index.md  modules.md  operations.md  performance.md  review.md  security.md  testing.md  typing.md
turn/: __init__.py
turn/agent/: __init__.py  facade.py  loop.py  result.py
turn/approval/: __init__.py  request.py  service.py  store.py
turn/artifact/: __init__.py  file.py  store.py  view.py
turn/audit/: __init__.py  record.py  store.py  view.py
turn/capability/: __init__.py  base.py  manifest.py  result.py  runtime.py
turn/control/: __init__.py  dashboard.py  pack.py
turn/error/: __init__.py  base.py
turn/eval/: __init__.py  suite.py
turn/event/: __init__.py  model.py  sink.py  store.py
turn/memory/: __init__.py  session.py  snapshot.py  store.py
turn/model/: __init__.py  base.py
turn/pack/: __init__.py  base.py  manifest.py  registry.py
turn/policy/: __init__.py  decision.py  rule.py  runtime.py
turn/port/: __init__.py  approval.py  artifact.py  audit.py  event.py  memory.py  model.py  policy.py  prompt.py  run.py  secret.py  session.py  tool.py
turn/prompt/: __init__.py  compile.py  layer.py  profile.py  snapshot.py  store.py
turn/run/: __init__.py  cancel.py  model.py  reply.py  store.py  turn.py
turn/secret/: __init__.py  lease.py  store.py
turn/session/: __init__.py  auth.py  guard.py  model.py  store.py
turn/team/: __init__.py  graph.py  runtime.py  task.py
turn/tool/: __init__.py  base.py  context.py  (+5 more)
(+49 files in other folders)
